Prevent slider overlap

--- a/src/css/interactive-controls/select.css
+++ b/src/css/interactive-controls/select.css
@@ -26,6 +26,7 @@
 	display: none;
 	position: absolute;
 	width: 100%;
+	z-index: 1;
 }
 
 .interactive-controls-options-list li {
